--- a/app/views/filters/show.html.erb
+++ b/app/views/filters/show.html.erb
@@ -14,5 +14,8 @@
 
 <%= link_to 'Back to filters list', filters_path, class: "big-button secondary" %>
 <br/>
+<span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will remove this filter from the system.
+A filter can only be removed while it is not used by any keys.">
 <%= link_to 'Delete filter', @filter, method: :delete, data: { confirm: 'Are you sure that you want to delete this filter?' },
             class: "small-button", disabled: !@filter.is_destroyable? %></td>
+</span>
