--- a/app/views/user_keys/show_partials/_approval_checkbox.html.erb
+++ b/app/views/user_keys/show_partials/_approval_checkbox.html.erb
@@ -2,8 +2,11 @@
 <div class="staff_only panel">
   <% if @user_key.approved_by?(@current_user) %>
     <p><strong>You have approved this key.</strong></p>
-    <%= link_to 'Undo approve key', undo_approve_key_path(@user_key), method: :patch,
+    <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will revoke your approval for this application.
+    Approval can be revoked until the key is confirmed and released to the requester.">
+      <%= link_to 'Undo approve key', undo_approve_key_path(@user_key), method: :patch,
                  class: "big-button secondary", data: {disable_with: "Please Wait..." } %> 
+    </span>
   
   <% else %> <!--This user has not approved the key yet-->
     
