Made cosmetic changes to index views

--- a/app/views/shared/_boolean_label.html.erb
+++ b/app/views/shared/_boolean_label.html.erb
@@ -4,5 +4,5 @@
 <% if boolean_label %>
   <span class="success label"><%= true_message %></span>
 <% else %>
-  <span class="secondary label"><%= false_message %> </span>
+  <span class="alert label"><%= false_message %> </span>
 <% end %>
