--- a/app/views/home/_staff_dashboard.html.erb
+++ b/app/views/home/_staff_dashboard.html.erb
@@ -14,7 +14,11 @@
       <td><%= link_to key.name, user_key_path(key) %>
       <td><%= link_to key.user.andrew_id, user_path(key.user) %></td>
       <td><%= key.time_submitted.to_formatted_s(:pretty)%></td>
-      <td><%= key.approval_users.approvers_only.size %></td>
+      <td><%= key.approval_users.approvers_only.size %>&nbsp;
+          <%if key.can_be_set_to? :confirmed %>
+            <span class="success label">Ready to be confirmed</span>
+          <% end %>
+      </td>
     </tr>
   <% end %>
   </table>
