made email un and pw private

--- a/app/views/user_key_mailer/admin_submit_msg.html.erb
+++ b/app/views/user_key_mailer/admin_submit_msg.html.erb
@@ -1,2 +1,2 @@
 <p><%= @user.andrew_id %> has submitted an application to request a key titled <%= @user_key.name %>. 
-View their application at <%= link_to nil, user_keys_url(@user_key) %> to assign filters or comment on the application. </p>
+View their application at <%= link_to nil, user_key_url(@user_key) %> to assign filters or comment on the application. </p>
