--- a/app/views/user_key_mailer/everyone_approved_key.html.erb
+++ b/app/views/user_key_mailer/everyone_approved_key.html.erb
@@ -1,1 +1,1 @@
-<p>The <%= @user_key.name %> key has been approved by all approving staff members. You may release it to the requester at <%= link_to nil, user_keys_url(@user_key) %> </p>
+<p>The <%= @user_key.name %> key has been approved by all approving staff members. You may release it to the requester at <%= link_to nil, user_key_url(@user_key) %> </p>
