--- a/app/views/user_key_mailer/share_with_approver_msg.html.erb
+++ b/app/views/user_key_mailer/share_with_approver_msg.html.erb
@@ -1,1 +1,1 @@
-<p>The <%= @user_key.name %> application by <%= @user.andrew_id %> has been assigned filters and released for approval by staff members. Please visit <%= link_to nil, user_keys_url(@user_key) %> to approve the request or to comment on the application. </p>
+<p>The <%= @user_key.name %> application by <%= @user.andrew_id %> has been assigned filters and released for approval by staff members. Please visit <%= link_to nil, user_key_url(@user_key) %> to approve the request or to comment on the application. </p>
