--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,7 +8,7 @@ input {
 }
 
 // Navbar
-  nav#top-bar {
+  nav#topbar {
     margin-bottom: 2rem;
 
     .title-area #root-link {
@@ -25,15 +25,15 @@ input {
       ul#nav-links li.active > a,
       ul#drop-links li.active > a  { background-color: $topbar-link-bg-hover; }
 
-      #search-form {
+      #searchbox {
         @media screen and (max-width: rem-calc(860)) { display: none; }
 
-        .search-label {
+        #search-label {
           padding-right: 0;
           padding-left: 0;
         }
 
-        .search-type-select {
+        #search-type-select {
           padding: 0;
           font-size: 0.7rem;
           color: $placeholder;
@@ -43,19 +43,19 @@ input {
           border-radius: 0;
           height: 1.75rem;
           top: 0.6875rem;
-          line-height: 1.75rem;
+          line-height: 1.5rem;
           cursor: default;
           &:hover { outline: none; border-left: solid 1px rgba(0,0,0,0.3); }
 
           option {
             height: 20px;
             color: $placeholder;
-            line-height: 10px;
+            line-height: 8px;
           }
         }
 
 
-        .search-param {
+        #search-param {
           padding-right: 0;
 
           #term {
