Symlinking php files

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -64,11 +64,10 @@
 
     <%# For medium up %>
       <li class="has-dropdown show-for-medium-up">
-        <a href="#">Welcome, <%= @current_user.first_name %></a>
+        <a href="#">Welcome,&nbsp;<%= @current_user.first_name %></a>
         <ul class="dropdown">
 
           <li><%= link_to "My Keys", own_user_keys_path %></li>
-
           <li><%= link_to "Logout", logout_path %></li>
 
         </ul>
