--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -90,7 +90,7 @@
 
 <div class="content" id="documentationPanel">
 
-<!-- FIXME add dynamic documentation content here -->
+  <%= render partial: 'user_keys/show_partials/documentation' %>
 
 </div>
 
