Fixed index table label bug

--- a/app/views/users/index_partials/_index_table.html.erb
+++ b/app/views/users/index_partials/_index_table.html.erb
@@ -28,7 +28,7 @@
 	  <td><%= link_to user.andrew_id, user %></td>
 	  <td><%= user.display_role %></td>
 	  <td><%= user.user_keys.all.size %></td>
-	  <td><%= render partial: 'shared/boolean_label', locals: {boolean_label: user.user_keys.confirmed.not_expired.active.all.empty?, true_message: "Yes", false_message: "No" }%></td>
+	  <td><%= render partial: 'shared/boolean_label', locals: {boolean_label: !user.user_keys.confirmed.not_expired.active.all.empty?, true_message: "Yes", false_message: "No" }%></td>
 	  <td><%= render partial: 'shared/boolean_label', locals: {boolean_label: user.active, true_message: "Yes", false_message: "No" } %></td>
 	  <%# Staff can see this list but only admin can edit users %>
           <% if @current_user.role? :admin %>
