--- a/app/views/user_keys/show_partials/_add_comment.html.erb
+++ b/app/views/user_keys/show_partials/_add_comment.html.erb
@@ -8,7 +8,7 @@
 
     <div class="row">
 	<%= p.label :message %>
-	<%= p.text_field :message %>
+	<%= p.text_area :message, rows: "3" %>
     </div>
 
     <%#  Only admin is allowed to make a post visible to the requester  %>
