--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -38,7 +38,7 @@ to refresh the list of organizations in the system. This action is executed auto
                repopulate_organizations_path, 
                method: :patch, class: "big-button center",
                data: { disable_with: "Please Wait...",
-               confirm: "Are you sure? This will send 1 request to CollegiateLink API for their organizations." } %>
+               confirm: "Are you sure? This will send multiple requests to CollegiateLink API for their organizations." } %>
 </span>
 <br/>
 
