--- a/app/views/user_keys/show_partials/_admin_only.html.erb
+++ b/app/views/user_keys/show_partials/_admin_only.html.erb
@@ -19,7 +19,7 @@
     <%#   Reset is currently only available after submission and before confirmation. %>
     <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :awaiting_filters %>
       | <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will send the application back to its requester so that the requester can make changes as needed.
-      Until the application is resubmitted by the requester, it will no longer be visible to staff. The request will automatically be notified.">
+      Until the application is resubmitted by the requester, it will no longer be visible to staff. The requester will automatically be notified.">
                  <%= link_to 'Remand', set_as_reset_path(@user_key), method: :patch,
                  data: { disable_with: "Please Wait..." },
                  data: { confirm: 'Are you sure? The key application and comments will be returned to the requester.' },
