Almost finished documentation

--- a/app/views/user_keys/show_partials/_documentation.html.erb
+++ b/app/views/user_keys/show_partials/_documentation.html.erb
@@ -2,7 +2,7 @@
   <h3>Authentication</h3>
   <p> All requests to the API require an API key and the corresponding andrewID of the
       individual who initially requested the API key. The API key is generated pending
-      the approval of the Student Life Administration.  </p>
+      the approval of the Student Activities Administration.  </p>
   <p><%= "Your andrewID is: #{@current_user.andrew_id}" %></br>
   <% if @user_key.at_stage?(:confirmed) %>
     <%= "Your API key is: #{@user_key.gen_api_key}" %>
@@ -16,7 +16,7 @@
   <p> All requests to the Shiny Metal API need to be <code>POST</code> requests with two
       header fields: <code>andrew_id</code> and <code>api_key</code>. Requests follow the same syntax
       as the <a href="http://support.collegiatelink.net/hc/en-us/articles/204033994-Documentation-for-Web-Services-API-Version-2-0-">CollegiateLink API</a>.
-      Only specific endopints and combinations of parameters are allowed for specific keys, however, as determined by the Student Life Office. You
+      Only specific endopints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. You
       can check the set of allowed permissions and parameters for your API key by clicking on the above "Permissions" tab.
   </p>
   <p> The base URL for making API calls is: <code>https://stugov.andrew.cmu.edu/staging/bridgeapi/api/v1/</code></p>
@@ -27,32 +27,45 @@
 
   <ul class="tabs" data-tab>
     <li class="tab-title active"><a href="#curlTestRequest">curl</a></li>
-    <li class="tab-title"><a href="#rubyTestRequest">ruby</a></li>
+    <li class="tab-title"><a href="#rubyTestRequest">Ruby</a></li>
+    <li class="tab-title"><a href="#pythonTestRequest">Python</a></li>
+    <li class="tab-title"><a href="#phpTestRequest">PHP</a></li>
   </ul>
 
   <div class="tabs-content">
 
     <div class="content active" id="curlTestRequest">
-
-      <pre class="prettyprint">  class Voila {
-      public:
-        // Voila
-        static const string VOILA = "Voila";
-
-        // will not interfere with embedded <a href="#voila2">tags</a>.
-      }</pre>
+      <h3> Sample API Call </h3>
+      <pre class="prettyprint"><%= "curl -X POST \\ 
+  -H 'andrew_id: #{@current_user.andrew_id}' \\
+  -H 'api_key: #{@user_key.gen_api_key}' \\
+  '#{root_url + "api/v1/"}demo_endpoint'" %></pre>
       <br/>
 
-      <h3>Expected Response: </h3>
-      <pre class="prettyprint">  {"message": "Success! You've made an API request with valid credentials!"}</pre>
+      <%= render partial: 'user_keys/show_partials/documentation_test_response' %>
 
     </div>
 
     <div class="content" id="rubyTestRequest">
-      <pre class="prettyprint">  http.get()</pre>
+      <h3> Sample API Call </h3>
+      <pre class="prettyprint"><%= "require 'base64'
+require 'openssl'
+require 'net/http'
+require 'JSON'
+
+uri = URI.parse('https://stugov.andrew.cmu.edu/staging/bridgeapi/api/v1/demo_endpoint')
+https = Net::HTTP.new(uri.host, uri.port)
+https.use_ssl = true
+https.verify_mode = OpenSSL::SSL::VERIFY_NONE
+req = Net::HTTP::Post.new(uri)
+# set the headers
+req['andrew_id'] = '#{@current_user.andrew_id}'
+req['api_key'] = '#{@user_key.gen_api_key}'
+res = https.request(req)
+JSON.parse(res.body)"%></pre>
       <br/>
-      <h3>Response: </h3>
-      
+      <%= render partial: 'user_keys/show_partials/documentation_test_response' %>
+
     </div>
   </div>
   <hr/>
@@ -61,30 +74,46 @@
       see all <code>public</code> events </p>
   <ul class="tabs" data-tab>
     <li class="tab-title active"><a href="#curlRequest">curl</a></li>
-    <li class="tab-title"><a href="#rubyRequest">ruby</a></li>
+    <li class="tab-title"><a href="#rubyRequest">Ruby</a></li>
+    <li class="tab-title"><a href="#pythonRequest">Python</a></li>
+    <li class="tab-title"><a href="#phpRequest">PHP</a></li>
   </ul>
 
   <div class="tabs-content">
 
     <div class="content active" id="curlRequest">
+      <h3>Sample API Call: </h3>
+      <pre class="prettyprint"><%= "curl -X POST \\
+  -H 'andrew_id: #{@current_user.andrew_id}' \\
+  -H 'api_key: #{@user_key.gen_api_key}' \\
+  '#{root_url + "api/v1/"}events?type=public'" %></pre>
 
-      <pre class="prettyprint">  class Voila {
-      public:
-        // Voila
-        static const string VOILA = "Voila";
-
-        // will not interfere with embedded <a href="#voila2">tags</a>.
-      }</pre>
       <br/>
 
-      <h3>Response: </h3>
+      <%= render partial: 'user_keys/show_partials/documentation_sample_response' %>
 
     </div>
 
     <div class="content" id="rubyRequest">
-      <pre class="prettyprint">  http.get()</pre>
+      <h3>Sample API Call: </h3>
+      <pre class="prettyprint"><%= "require 'base64'
+require 'openssl'
+require 'net/http'
+require 'JSON'
+
+uri = URI.parse('https://stugov.andrew.cmu.edu/staging/bridgeapi/api/v1/events?pageSize=2&type=public')
+https = Net::HTTP.new(uri.host, uri.port)
+https.use_ssl = true
+https.verify_mode = OpenSSL::SSL::VERIFY_NONE
+req = Net::HTTP::Post.new(uri)
+# set the headers
+req['andrew_id'] = '#{@current_user.andrew_id}'
+req['api_key'] = '#{@user_key.gen_api_key}'
+res = https.request(req)
+JSON.parse(res.body)"%></pre>
       <br/>
-      <h3>Response: </h3>
+
+      <%= render partial: 'user_keys/show_partials/documentation_sample_response' %>
       
     </div>
 
