--- a/app/views/user_keys/show_partials/_documentation.html.erb
+++ b/app/views/user_keys/show_partials/_documentation.html.erb
@@ -12,8 +12,8 @@
   </p>
   <hr/>
 
-  <h3> Making A Request to the Shiny Metal API </h3>
-  <p> All requests to the Shiny Metal API need to be <code>POST</code> requests with two
+  <h3> Making A Request to the Bridge API </h3>
+  <p> All requests to the Bridge API need to be <code>POST</code> requests with two
       header fields: <code>andrew_id</code> and <code>api_key</code>. Requests follow the same syntax
       as the <a href="http://support.collegiatelink.net/hc/en-us/articles/204033994-Documentation-for-Web-Services-API-Version-2-0-">CollegiateLink API</a>.
       Only specific endopints and combinations of parameters are allowed for specific keys, however, as determined by the Student Activities Office. You
@@ -22,7 +22,7 @@
   <p> The base URL for making API calls is: <code>https://stugov.andrew.cmu.edu/staging/bridgeapi/api/v1/</code></p>
   <hr/>
   <h3> Pagination </h3>
-  <p> All API calls can also have two pagination parameters, <code>page</code> and <code>pageSize</code>. <code>page</code> 
+  <p> All API calls can also have two pagination parameters, <code>page</code> and <code>pageSize</code>. <code>page</code>
     is a parameter that determines which page of the overall response will be returned. <code>pageSize</code> will determine how many
     records will be returned in one response. In order to get all relevant records, an iterator will need to be constructed in
     client code to repeatedly request specific pages. </p>
@@ -42,7 +42,7 @@
 
     <div class="content active" id="curlTestRequest">
       <h3> Sample API Call </h3>
-      <pre class="prettyprint"><%= "curl -X POST \\ 
+      <pre class="prettyprint"><%= "curl -X POST \\
   -H 'andrew_id: #{@current_user.andrew_id}' \\
   -H 'api_key: #{@user_key.gen_api_key}' \\
   '#{root_url + "api/v1/"}demo_endpoint'" %></pre>
@@ -135,7 +135,7 @@ res = https.request(req)
 JSON.parse(res.body)"%></pre>
 
       <%= render partial: 'user_keys/show_partials/documentation_sample_response' %>
-      
+
     </div>
 
     <div class="content" id="pythonRequest">
@@ -155,7 +155,7 @@ print(r.text)
     </div>
 
   </div>
-  
+
 </div>
 
 
