Fixing endpoint nil on api calls

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <p><%= @recipient.nil? ? "Hello" : @recipient.first_name %>, you have received a message from the Bridge API:</p>
+    <p><%= @recipient.nil? ? "Hello" : @recipient.first_name %>, you have received a message from The Bridge API:</p>
 
     <hr/>
 
