--- a/app/views/user_keys/show_partials/_submit_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_submit_buttons.html.erb
@@ -3,7 +3,7 @@
 <span class="has-tip tip-top" data-tooltip aria-haspopup="true"
       title="<%= markdown(Page.find_or_create("terms").message) %>">
   <%= link_to "terms and conditions", page_path("terms") %></span>
-for using the Bridge API.
+for using The Bridge API.
 </p>
 
 <%# Key owner can submit the key or edit the application before submitting. %>
